k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hcp-checkmarx
  labels:
    name: hcp-checkmarx
    openshift.io/cluster-monitoring: "true"
  annotations:
    openshift.io/description: "HCP Terraform Checkmarx Integration"
    openshift.io/display-name: "HCP Checkmarx Listener"
