k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-checkmarx-listener
  namespace: hcp-checkmarx
  labels:
    app: hcp-checkmarx-listener
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: hcp-checkmarx-tls
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: http
    protocol: TCP
  selector:
    app: hcp-checkmarx-listener
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hcp-checkmarx-listener
  namespace: hcp-checkmarx
  labels:
    app: hcp-checkmarx-listener
  annotations:
    haproxy.router.openshift.io/timeout: "300s"
spec:
  to:
    kind: Service
    name: hcp-checkmarx-listener
    weight: 100
  port:
    targetPort: https
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
